Closed Bug 1652124 Opened 4 years ago Closed 4 years ago

Elaborate FEATURE_FAILURE_UNKNOWN_DEVICE_VENDOR.

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

Details

Attachments

(1 file)

This should help seperating out some of the UNKNOWN_DEVICE_VENDOR that
we see in telemetry.

This should help seperating out some of the UNKNOWN_DEVICE_VENDOR that
we see in telemetry.

Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/707df0a3f01e
Elaborate FEATURE_FAILURE_UNKNOWN_DEVICE_VENDOR. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: