Bug 1652124 - Elaborate FEATURE_FAILURE_UNKNOWN_DEVICE_VENDOR. r=aosmond

This should help separating out some of the UNKNOWN_DEVICE_VENDOR that
we see in telemetry.

Differential Revision: https://phabricator.services.mozilla.com/D83170